--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <div class="sub-content">
             <img src="images/icon-success.svg" alt="">
             <p class="sub-p1">Thanks for <br> subscribing</p>
-            <p>A confirmation email has been sent to <br>
+            <p class="sub-p2">A confirmation email has been sent to <br>
                 <span>ash@loremcompany.com</span>.
-                 please open it and <br>
-                 click the button inside to confirm your <br> subcription.</p>
+                 please open <br>
+                 it and click the button inside to confirm <br>your subcription.</p>
         </div>
         <div>
             <button id="dismiss">
