--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             <p class="sub-p1">Thanks for <br> subscribing</p>
             <p class="sub-p2">A confirmation email has been sent to <br>
                 <span>ash@loremcompany.com</span>.
-                 please open it and<br>
-                 click the button inside to confirm your <br>subcription.</p>
+                 please open it and click the button inside to confirm your <br>subcription.</p>
         </div>
         <div>
             <button id="dismiss">
